--- a/WebSite1/web.config
+++ b/WebSite1/web.config
@@ -1,10 +1,14 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<system.web>
+	<connectionStrings>
+  <add name="PSELFConnectionString" connectionString="Data Source=DESKTOP-AC4AK63;Initial Catalog=PSELF;Persist Security Info=True;User ID=sa;Password=Password@123"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+ <system.web>
 		<compilation debug="true" targetFramework="4.0"/>
 	</system.web>
 </configuration>
